API 수정 - 사용 가능한 seats를 가져올 때 위경도를 기준으로 가까운 seats를 우선적으로 가져오도록 변경
